@@ -1,4 +1,7 @@
 Next
+  - Fix bug that prevented the Configuration GUI from saving to dosbox.conf
+    the last Windows 3.1 theme you applied using the dropdown menu.
+    (joncampbell123).
   - Add option to apply vmemdelay to SVGA and linear framebuffer
     modes (such as VESA BIOS modes), which reduces emulator performance
     for those modes, but allows you to emulate slower SVGA cards.
